--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
 asgiref==3.3.1
-Django==3.1.4
-django-auth-ldap==2.2.0
-django-hashers-passlib==0.4
+certifi==2020.12.5
+chardet==4.0.0
+Django==3.1.7
+django-auth-ldap==2.3.0
 django-rest-auth==0.9.5
 djangorestframework==3.12.2
-passlib==1.7.4
+idna==2.10
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 python-dotenv==0.15.0
 python-ldap==3.3.1
-python-mimeparse==1.6.0
-pytz==2020.4
-RestAuthCommon==0.7.0
+pytz==2021.1
+PyYAML==5.4.1
+requests==2.25.1
 six==1.15.0
-South==1.0.2
 sqlparse==0.4.1
+urllib3==1.26.3
