--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,7 +6,7 @@ django-auth-ldap==2.3.0
 django-rest-auth==0.9.5
 djangorestframework==3.12.2
 idna==2.10
-psycopg2==2.8.6
+psycopg2-binary
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 python-dotenv==0.15.0
