--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ certifi==2020.12.5
 chardet==4.0.0
 Django==3.1.7
 django-auth-ldap==2.3.0
+django-cors-headers==3.7.0
 django-rest-auth==0.9.5
 djangorestframework==3.12.2
 idna==2.10
