--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-responsive": "^8.0.2",
     "axios": "^0.21.1",
     "is-svg": "^4.2.2",
     "js-cookie": "^2.2.1",
@@ -20,8 +21,11 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-popconfirm": "^0.1.1",
+    "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "reactjs-popup": "^2.0.4",
+    "styled-components": "^5.2.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -50,6 +54,7 @@
     ]
   },
   "devDependencies": {
-    "@types/js-cookie": "^2.2.6"
+    "@types/js-cookie": "^2.2.6",
+    "@types/styled-components": "^5.1.9"
   }
 }
