--- a/docker/nginx/nginx.config
+++ b/docker/nginx/nginx.config
@@ -25,4 +25,9 @@ server {
         proxy_redirect off;
         proxy_pass   http://backend:8000;
     }
+
+    location /django_static/ {
+        autoindex on;
+        alias /app/backend/server/django_static/;
+    }
 }
