--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,16 +1,23 @@
-# The first stage
-# Build React static files
-FROM node:13.12.0-alpine as build
+# Multi-stage
+# 1) Node image for building frontend assets
+# 2) nginx stage to serve frontend assets
 
+# Name the node stage "builder"
+FROM node:10 AS builder
+# Set working directory
 WORKDIR /app/frontend
-COPY ./frontend/package.json ./
-COPY ./frontend/package-lock.json ./
-RUN npm ci --silent
+# Copy all files from current directory to working dir in image
 COPY ./frontend/ ./
-RUN npm run build
+# install node modules and build assets
+RUN yarn install && yarn build
 
-# The second stage
-# Copy React static files and start nginx
-FROM nginx:stable-alpine
-COPY --from=build /app/frontend/build /usr/share/nginx/html
+# nginx state for serving content
+FROM nginx:alpine
+# Set working directory to nginx asset directory
+WORKDIR /usr/share/nginx/html
+# Remove default nginx static assets
+RUN rm -rf ./*
+# Copy static assets from builder stage
+COPY --from=builder /app/frontend/build /usr/share/nginx/html
+# Containers run nginx with global directives and daemon off
 CMD ["nginx", "-g", "daemon off;"]
