--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -3,12 +3,12 @@ version: '3'
 services:
   database:
     image: postgres
-    restart: unless-stopped
+    restart: always
     env_file:
       - .env
 
   backend:
-    restart: unless-stopped
+    restart: always
     env_file:
       - .env
     build:
