--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,24 +3,22 @@ version: '3'
 services:
   database:
     image: postgres
-    restart: unless-stopped
+    restart: always
     env_file:
       - .env
 
   nginx:
-    restart: unless-stopped
+    restart: always
     build:
       context: .
       dockerfile: ./docker/nginx/Dockerfile
-    volumes:
-      - ./docker/nginx/production:/etc/nginx/conf.d
     ports:
       - 80:80
     depends_on:
       - backend
 
   backend:
-    restart: unless-stopped
+    restart: always
     env_file:
       - .env
     build:
