--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -12,5 +12,6 @@ RUN yarn build
 # The second stage
 # Copy React static files and start nginx
 FROM nginx:stable-alpine
+COPY ./docker/nginx/nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=build /app/frontend/build /usr/share/nginx/html
 CMD ["nginx", "-g", "daemon off;"]
