--- a/docker/frontend/Dockerfile
+++ b/docker/frontend/Dockerfile
@@ -1,17 +1,20 @@
 # The first stage
 # Build React static files
 FROM node:10 as build
+MAINTAINER Mikhail Abramov
 
-WORKDIR /app/frontend
-COPY ./frontend/package.json ./
-COPY ./frontend/package-lock.json ./
-RUN yarn install
+WORKDIR /app
+
 COPY ./frontend/ ./
+
+RUN yarn install
 RUN yarn build
 
 # The second stage
 # Copy React static files and start nginx
-FROM nginx:stable-alpine
-COPY ./docker/frontend/nginx.conf /etc/nginx/conf.d/default.conf
-COPY --from=build /app/frontend/build /usr/share/nginx/html
+FROM nginx:stable-alpine as frontend
+MAINTAINER Mikhail Abramov
+
+COPY ./docker/nginx.conf /etc/nginx/conf.d/default.conf
+COPY --from=build /app/build /usr/share/nginx/html
 CMD ["nginx", "-g", "daemon off;"]
