--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -15,6 +15,6 @@ RUN yarn build
 FROM nginx:stable-alpine as frontend
 MAINTAINER Mikhail Abramov
 
-COPY ./docker/nginx.conf /etc/nginx/conf.d/default.conf
+COPY ./frontend/nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=build /app/build /usr/share/nginx/html
 CMD ["nginx", "-g", "daemon off;"]
