--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,16 +1,16 @@
-FROM archlinux
+FROM python:3
 MAINTAINER Mikhail Abramov
 
-RUN curl -ks 'https://password.corp.redhat.com/legacy.crt' > legacy.crt
-RUN curl -ks 'https://password.corp.redhat.com/RH-IT-Root-CA.crt' > RH-IT-Root-CA.crt
+RUN curl -ks 'https://password.corp.redhat.com/legacy.crt' -o '/usr/local/share/ca-certificates/legacy.crt'
+RUN curl -ks 'https://password.corp.redhat.com/RH-IT-Root-CA.crt' -o '/usr/local/share/ca-certificates/RH-IT-Root-CA.crt'
 
-RUN trust anchor --store legacy.crt
-RUN trust anchor --store RH-IT-Root-CA.crt
-
-RUN pacman -Sy --noconfirm archlinux-keyring && pacman -Syyu --noconfirm
-RUN pacman -S  --noconfirm gcc git nano python python-pip
+RUN /usr/sbin/update-ca-certificates
 
 WORKDIR /app
+
+RUN apt-get update
+RUN apt-get install python3-dev -y
+RUN apt-get install libldap2-dev libsasl2-dev libssl-dev -y
 
 COPY ./backend/requirements.txt /app/backend/
 
