--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,7 +5,7 @@ MAINTAINER Mikhail Abramov
 
 WORKDIR /app
 
-COPY ./frontend/ ./
+COPY . /app/
 
 RUN yarn install
 RUN yarn build
@@ -15,6 +15,6 @@ RUN yarn build
 FROM nginx:stable-alpine as frontend
 MAINTAINER Mikhail Abramov
 
-COPY ./frontend/nginx.conf /etc/nginx/conf.d/default.conf
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=build /app/build /usr/share/nginx/html
 CMD ["nginx", "-g", "daemon off;"]
