Add permissions for ops

--- a/openshift/dashboard-backend-deploymentconfig.yaml
+++ b/openshift/dashboard-backend-deploymentconfig.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - command:
-            - wsgi-entrypoint.sh
+            - /app/backend/wsgi-entrypoint.sh
           env:
             - name: ADMINS_LIST
               valueFrom:
