--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -23,6 +23,6 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
         proxy_redirect off;
-        proxy_pass   http://dashboard_backend:8000;
+        proxy_pass   http://dashboard-backend:8000;
     }
 }
