Add non-sudo user to backend

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,16 +6,17 @@ RUN curl -ks 'https://password.corp.redhat.com/RH-IT-Root-CA.crt' -o '/usr/local
 
 RUN /usr/sbin/update-ca-certificates
 
-WORKDIR /app
-
 RUN apt-get update
 RUN apt-get install python3-dev -y
 RUN apt-get install libldap2-dev libsasl2-dev libssl-dev -y
 
-COPY requirements.txt /app/
+
+WORKDIR /app
+ADD . /app/
 
 RUN pip install --upgrade pip
 RUN pip install gunicorn
 RUN pip install -r requirements.txt
 
-ADD . /app/
+RUN useradd appuser && chown -R appuser /app
+USER appuser
