--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -17,3 +17,7 @@ ADD . /app/
 RUN pip install --upgrade pip
 RUN pip install gunicorn
 RUN pip install -r requirements.txt
+
+RUN chown -R 1001:0 /app
+
+USER 1001
