--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -16,7 +16,7 @@ services:
     build:
       context: .
       dockerfile: ./backend/Dockerfile
-    entrypoint: /app/backend/wsgi-entrypoint.sh
+    entrypoint: ./wsgi-entrypoint.sh
     ports:
       - 8000:8000
     depends_on:
