--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -14,9 +14,11 @@ services:
     env_file:
       - .env
     build:
-      context: .
-      dockerfile: ./backend/Dockerfile
+      context: ./backend
+      dockerfile: Dockerfile
     entrypoint: ./wsgi-entrypoint.sh
+    expose:
+      - 8000
     ports:
       - 8000:8000
     depends_on:
