--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,10 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+    expose:
+      - 8080
     ports:
-      - 80:80
+      - 8080:8080
     depends_on:
       - dashboard-backend
 
