--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
 asgiref==3.3.1
 certifi==2020.12.5
 chardet==4.0.0
-Django==3.1.8
+Django>=3.1.12
 django-auth-ldap==2.3.0
 django-cors-headers==3.7.0
 django-rest-auth==0.9.5
@@ -17,4 +17,4 @@ PyYAML==5.4.1
 requests==2.25.1
 six==1.15.0
 sqlparse==0.4.1
-urllib3==1.26.4
+urllib3>=1.26.5
