Add Circle to test and backend

--- a/backend/ci_dashboardApp/fixtures/ci.yaml
+++ b/backend/ci_dashboardApp/fixtures/ci.yaml
@@ -10,8 +10,8 @@
 - model: ci_dashboardApp.CI
   pk: 2
   fields:
-    ci: DEVTOOLS_JENKINS
-    link: https://studio-jenkins-csb-codeready.cloud.paas.psi.redhat.com/
-    type: JENKINS
+    ci: camel-tooling
+    link: https://app.circleci.com/
+    type: CIRCLE
     access: Public
     owner: null
