--- a/.gitignore
+++ b/.gitignore
@@ -113,6 +113,6 @@ media/
 # Ignore Django Migrations in Development if you are working on team
 
 # Only for Development only
-**/migrations/**
-!**/migrations
-!**/migrations/__init__.py
+#**/migrations/**
+#!**/migrations
+#!**/migrations/__init__.py
