--- a/backend/ci_dashboardApp/fixtures/ci.yaml
+++ b/backend/ci_dashboardApp/fixtures/ci.yaml
@@ -5,6 +5,7 @@
     link: https://master-jenkins-csb-fusetools-qe.apps.ocp4.prod.psi.redhat.com/
     type: JENKINS
     access: Public
+    group: 1
     owner: null
 
 - model: ci_dashboardApp.CI
@@ -14,6 +15,7 @@
     link: https://app.circleci.com/
     type: CIRCLE
     access: Public
+    group: 1
     owner: null
 
 - model: ci_dashboardApp.CI
@@ -23,4 +25,5 @@
     link: https://github.com/
     type: GITHUB
     access: Public
+    group: 2
     owner: null
