--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,14 +1,8 @@
 name: docker-compose-actions-workflow
 on: push
-env:
-  SECRET_KEY: omgItIsNotASuperSecretKey
-  POSTGRES_DB: postgres
-  POSTGRES_USER: postgres
-  POSTGRES_PASSWORD: postgres
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
       - name: Build the stack
-        run: docker-compose up -d
+        run: docker-compose -f docker-compose-test.yml up --build
