--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,8 +1,13 @@
 name: docker-compose-actions-workflow
-on: push
+on:
+  push:
+    branches:
+      - master
+  pull_request:
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: Build the stack
         run: docker-compose -f docker-compose-test.yml up --build
