Fix dev/test compose files

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -14,7 +14,7 @@ services:
       - .env
     build:
       context: ./backend
-      dockerfile: Dockerfile.test
+      dockerfile: Dockerfile
     entrypoint: ./wsgi-entrypoint.sh
     expose:
       - 8000
