Update github actions

--- a/.github/workflows/pullRequest.yml
+++ b/.github/workflows/pullRequest.yml
@@ -12,10 +12,10 @@ jobs:
       - name: Check containers
         run: docker ps
       - name: Print docker-compose logs
-        run: docker-compose logs
+        run: docker-compose -f docker-compose-test.yml logs
       - name: Take web page screenshots
         uses: saadmk11/comment-webpage-screenshot@main
         with:
           capture_urls: "http://0.0.0.0:8080/"
       - name: Docker-compose down
-        run: docker-compose down
+        run: docker-compose -f docker-compose-test.yml down
