--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -14,6 +14,6 @@ jobs:
       - name: Check containers
         run: docker ps
       - name: Print docker-compose logs
-        run: docker-compose logs
+        run: docker-compose -f docker-compose-test.yml logs
       - name: Docker-compose down
-        run: docker-compose down
+        run: docker-compose -f docker-compose-test.yml down
