--- a/.github/workflows/pullRequestDependabot.yml
+++ b/.github/workflows/pullRequestDependabot.yml
@@ -1,10 +1,15 @@
 name: docker-compose-actions-workflow
-on:
-  pull_request:
+
+on: pull_request_target
+
+permissions:
+  pull-requests: write
+  contents: write
+
 jobs:
   test:
     runs-on: ubuntu-latest
-    if: ${{ github.actor != 'dependabot[bot]' }}
+    if: ${{ github.actor == 'dependabot[bot]' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
