--- a/.github/workflows/pullRequest.yml
+++ b/.github/workflows/pullRequest.yml
@@ -1,6 +1,7 @@
 name: docker-compose-actions-workflow
-on:
-  pull_request:
+on: pull_request
+permissions:
+  pull-requests: write
 jobs:
   test:
     runs-on: ubuntu-latest
