--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,26 +5,18 @@
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^12.1.5",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^28.1.7",
-    "@types/material-ui": "^0.21.8",
-    "@types/node": "^18.7.9",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-responsive": "^8.0.5",
     "axios": "^0.27.2",
-    "is-svg": "^4.3.2",
-    "js-cookie": "^3.0.1",
+    "clsx": "^1.2.1",
+    "eslint-config-react-app": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-popconfirm": "^0.1.1",
     "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
-    "reactjs-popup": "^2.0.4",
     "styled-components": "^5.3.5",
     "typescript": "^4.1.2",
     "web-vitals": "^2.1.4"
@@ -54,7 +46,6 @@
     ]
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.2",
     "@types/react-helmet": "^6.1.5",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.25"
