--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   dashboard-database:
-    image: postgres
+    image: postgres:13
     container_name: dashboard-database
     env_file:
       - .env
