--- a/.github/workflows/pullRequest.yml
+++ b/.github/workflows/pullRequest.yml
@@ -12,17 +12,29 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Build the stack
         run: docker-compose -f docker-compose-test.yml up --build --detach
+
       - name: Check containers
         run: docker ps
+
       - name: Print docker-compose logs
         run: docker-compose -f docker-compose-test.yml logs
-      - name: Take web page screenshots
-        uses: saadmk11/comment-webpage-screenshot@main
+
+      - name: Install capture-website-cli
+        shell: bash
+        run: npm install --global capture-website-cli
+
+      - name: Screenshot Website
+        shell: bash
+        run: capture-website http://172.17.0.1:80 --output ./screenshot.png --full-page
+
+      - name: Upload screenshot
+        uses: actions/upload-artifact@v3
         with:
-          upload_to: github_branch
-          capture_changed_html_files: no
-          capture_urls: "http://172.17.0.1:80"
+          name: dashboard-home
+          path: ./screenshot.png
+
       - name: Docker-compose down
         run: docker-compose -f docker-compose-test.yml down
