Change ldap auth to base with service account

--- a/.env.test
+++ b/.env.test
@@ -1,9 +1,12 @@
 SECRET_KEY=omgItIsNotASuperSecretKey
-ADMINS_LIST='["testOne"]'
-STAFF_LIST='["testTwo"]'
+ADMINS_LIST='["admin"]'
+STAFF_LIST='["admin"]'
+
+DJANGO_SERVICE_USERNAME="admin"
+DJANGO_SERVICE_PASSWORD="admin"
 
 POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 
-BACKEND_LOCAL=
+BACKEND_LOCAL=1
