Add options branch/workflow

--- a/backend/ci_dashboardApp/fixtures/job.yaml
+++ b/backend/ci_dashboardApp/fixtures/job.yaml
@@ -17,6 +17,7 @@
   fields:
     job: camel-lsp-client-vscode
     path: camel-tooling
+    workflow: Main CI
     ci: 3
 
 - model: ci_dashboardApp.Job
@@ -24,4 +25,5 @@
   fields:
     job: VUT-ITT-IBT
     path: unsortedhashsets
+    workflow: docker-compose-actions-workflow
     ci: 4
